<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SkoltiAlert</string>
    <string name="auth_progress_title">Authenticating&#8230;</string>
    <string name="auth_progress_text">Fetching your profile information.</string>
    <string name="track_label">Add track</string>
    <string name="settings_label">Settings</string>
    <string name="preferences_label">Prefs</string>
    <string name="about_label">About</string>
    <string name="track_shortcut">t</string>
    <string name="settings_shortcut">s</string>
    <string name="about_shortcut">a</string>
    <string name="settings_namelabel">name:</string>
    <string name="settings_snamelabel">screen name:</string>
    <string name="refresh_every_label">Pull Alert every: </string>
    <string name="settings_title">Registration</string>
    <string name="settings_subtitle1">Without signing you can&#8230;</string>
    <string name="settings_line1">Monitoring by charts your twitter searchs,</string>
    <string name="settings_line2">read and analyse your searchs</string>
    <string name="settings_line3">and manage alarms when they exceed a limit</string>
    <string name="settings_subtitle2">Signing you will also&#8230;</string>
    <string name="settings_line4">Tweet and retweet your searchs</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_please_sign">Please log through twitter (oauth)</string>
    <string name="userhint">Logged off</string>
    <string name="alarm_service_started">Updating Mentions&#8230;</string>
    <string name="alarm_service_hayalarma">Alarm detected</string>
    <string name="alarm_service_hayalarma_detalle">Alarm limit exceeded!</string>
    <string name="alarm_service_label">SkoltiAlert Alarm Service</string>
    <string name="category_account">Twitter account</string>
    <string name="title_oauth_twitter">Oauth sign</string>
    <string name="summary_oauth_twitter">Not logged</string>
    <string name="summary_oauth_twitter_logged">Logged as: </string>
    <string name="category_refresh">Alarm management</string>
    <string name="title_toggle_refresh">Do refresh</string>
    <string name="summary_toggle_refresh">No refresh, stops getting data!</string>
    <string name="title_toggle_sdcard">Store on SDCard</string>
    <string name="summary_toggle_sdcard">Close app to get changes (reenter searches is needed)</string>
    <string name="title_notification_refresh">Notification bar</string>
    <string name="summary_notification_refresh">Show notification while refreshing</string>
    <string name="title_list_refresh">Period checking</string>
    <string name="summary_list_refresh">Every period refresh charts and checks alerts</string>
    <string name="category_mentions">Status</string>
    <string name="title_last_mentions">History statuses</string>
    <string name="summary_last_mentions">History statuses means more memory</string>
    <string name="category_more_info">Info</string>
    <string name="title_visit_skolti">Additional Info</string>
    <string name="summary_visit_skolti">Visit us at www.skolti.com</string>
    <string name="activity_about">About SkoltiAlert %1$s</string>
    <string name="no_tracks_title">No searches yet</string>
    <string name="no_tracks_subtitle">Do you want to start monitoring?</string>
    <string name="no_tracks_line1">Just add an new search</string>
    <string name="no_tracks_line2">filling a search word and a top limit</string>
    <string name="no_tracks_line3">You be warned when the limit exceeds</string>
    <string name="no_tracks_line4">Please set your setting how to be warned</string>
    <string name="image_for_position">Image for position </string>
    <string name="download_done">Refresh done</string>
    <string name="ver_mentions">Mentions</string>
    <string name="ver_charts">Chart</string>
    <string name="ver_alerts">Alerts</string>
    <string name="edit_track">Edit</string>
    <string name="delete_track">Delete</string>
    <string name="track_edit_details">Track details</string>
    <string name="track_edit_modify">Modify</string>
    <string name="track_edit_delete">Delete</string>
    <string name="track_edit_cancel">Cancel</string>
    <string name="track_edit_search">Track Search: </string>
    <string name="track_edit_toplimit">Top Limit: </string>
    <string name="track_add_add">Add</string>
    <string name="track_add_details">Add new track</string>
    <string name="track_add_succesfully">Track added Succesfully, loading status and alerts&#8230;</string>
    <string name="tweet_done">Tweet done!</string>
    <string name="sending_tweet">Sending&#8230;</string>
    <string name="please_login_oauth">Please sign first (settings)</string>
    <string name="tweet_error">Tweet Error</string>
    <string name="tweet_too_long">Message too long</string>
    <string name="needed_tree_samples">Needed at least 3 samples to show charts dynamically</string>
    <string name="signin_twitter">Sign in Twitter</string>
    <string name="signoff_twitter">Sign off Twitter</string>
    <string name="cont_twitter">Continue</string>
    <string name="still_loading">Still loading&#8230;</string>
    <string name="now_loading">Loading&#8230;</string>
    <string name="logging_please_wait">Logging&#8230; please wait</string>
    <string name="not_logged_logging">Not logged, logging&#8230;</string>
    <string name="today_date">today</string>
    <string name="yesterday_date">yesterday</string>
    <string name="load_more_items">Load more items</string>
    <string name="mentions_hour">status/hour</string>
</resources>
