<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tabtrack">
    <ListView
    android:id="@+id/listtrack"
    android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layoutAnimation="@anim/layout_fade_in"/>
	<LinearLayout
		android:id="@+id/notracks"
		android:layout_width="fill_parent"
  		android:layout_height="fill_parent"
  		android:orientation="vertical">
	    <TextView 
	    android:text=" " 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:layout_gravity="center_horizontal"/>
	    <TextView 
	    android:text="@string/no_tracks_title" 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:textColor="@color/darkgreen"
	    android:textStyle="bold"
	    android:layout_gravity="center_horizontal"/>
	    <TextView 
	    android:text=" " 
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:layout_gravity="center_horizontal"/>
	    <TextView 
	    android:text="@string/no_tracks_subtitle"
	    android:textColor="@color/black"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:textStyle="bold" 
	    android:layout_gravity="center_horizontal"/>
	    <TextView 
	    android:text="@string/no_tracks_line1"
	    android:textColor="@color/ivory_4"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:layout_gravity="center_horizontal"/>
	    <TextView 
	    android:text="@string/no_tracks_line2"
	    android:textColor="@color/ivory_4"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:layout_gravity="center_horizontal"/>
	    <TextView 
	    android:text="@string/settings_line3"
	    android:textColor="@color/ivory_4"
	    android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:layout_gravity="center_horizontal"/>
	    <TextView 
	    android:text="@string/no_tracks_line4"
	    android:textColor="@color/ivory_4"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:layout_gravity="center_horizontal"/>
	</LinearLayout>
</LinearLayout>
